Add header comments.

--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@
  */
 
 /*
+    style.css
+    date-progress
+
+    Created by:
+        * Jean-Pierre Höhmann
+ */
+
+/*
 
 Styling for the shortcode generator.
 
